--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_spinkit: ^5.1.0
   get: ^4.6.5
   shared_preferences: ^2.0.15
+  http: ^0.13.4
+  dio: ^4.0.6
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
