--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   http: ^0.13.4
   dio: ^4.0.6
   cached_network_image: ^3.2.1
+  hive: ^2.2.2
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
