--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cached_network_image: ^3.2.1
   hive: ^2.2.2
   hive_flutter: ^1.1.0
+  lottie: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/rocket.png
+    - assets/img/background.png
+    - assets/animations/45722-rocket-loader.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
